kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "26"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"promptscad"},"name":"promptscad","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"promptscad"}},"strategy":{},"template":{"metadata":{"creationTimestamp":null,"labels":{"app":"promptscad"}},"spec":{"containers":[{"env":[{"name":"DEEPSEEK_API_KEY","valueFrom":{"secretKeyRef":{"key":"DEEPSEEK_API_KEY","name":"deepseek-api-key"}}}],"image":"ahmadsayed/promptscad:10","name":"p [...]
  creationTimestamp: "2025-05-13T14:32:09Z"
  generation: 30
  labels:
    app: promptscad
  name: promptscad
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: promptscad
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: promptscad
    spec:
      containers:
      - env:
        - name: DEEPSEEK_API_KEY
          valueFrom:
            secretKeyRef:
              key: DEEPSEEK_API_KEY
              name: deepseek-api-key
        image: ahmadsayed/promptscad:05272203
        imagePullPolicy: IfNotPresent
        name: promptscad
        ports:
        - containerPort: 3000
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: promptscad
  labels:
    app: promptscad
spec:
  selector:
    app: promptscad
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
